You Call That a Daemon

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,14 +6,16 @@ classifier =
 
 [global]
 setup-hooks =
-    pbr.hooks.setup_hook        
+    pbr.hooks.setup_hook
 
 [files]
 packages =
     did_you
 data_files =
     /usr/local/etc =
-        config/did_you.conf    
+        config/did_you.conf
+    /usr/local/bin =
+        scripts/did_you_daemon
 
 [entry_points]
     console_scripts =
